# cse160-WI24

./: .gitignore  CUDA-gdb.md  Debugging.md  NSightSetup.md  README.md  SetupFAQ.md
PA1/: Makefile  README.md  template.cu
PA2/: Makefile  Readme.md  dataset_generator.cpp  template.cu
PA2/Dataset/0/: input0.raw  input1.raw  output.raw
PA2/Dataset/1/: input0.raw  input1.raw  output.raw
PA3/: Makefile  Readme.md  dataset_generator.cpp  template.cu
PA4/: Makefile  Readme.md  dataset_generator.cpp  template.cu  time.py
PA5/: Makefile  Readme.md  dataset_generator.cpp  template.cu  time_code.py
PA6/: Makefile  Readme.md  ece408net.h  m1.cc
PA6/data/: t10k-86-labels-idx1-ubyte
PA6/src/: network.h
PA7/: Makefile  Readme.md  ece408net.cc  m2.cc
PA8/: .gitignore  Makefile  Readme.md  ece408net-extra.cc  ece408net.h  m2  m2-extra  m2.cc
PA8/src/: layer.h  mnist.cc  mnist.h  network.cc
libgputk/: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  appveyor.yml  gputk.h  gputkArg.cpp  gputkArg.h  gputkAssert.h  gputkCUDA.cpp  gputkCUDA.h  gputkCast.h  gputkComparator.h  gputkDataset.cpp  gputkDataset.h  gputkDataset_test.cpp  gputkDirectory.cpp  gputkDirectory.h  gputkExit.cpp  gputkExit.h  gputkExport.cpp  gputkExport.h  gputkFile.cpp  gputkFile.h  gputkImage.cpp  gputkImage.h  gputkImport.cpp  gputkImport.h  gputkInit.cpp  gputkInit.h  gputkLogger.cpp  gputkLogger.h  gputkMD5.h  gputkMPI.cpp  gputkMPI.h  gputkMalloc.h  gputkPPM.cpp  gputkPPM.h  gputkPath.cpp  (+15 more)
libgputk/docs/: Readme.md
utils/: gpu.py  nvprof.py  printer.py  profile.py
(+69 files in other folders)
